--- a/css/global.css
+++ b/css/global.css
@@ -1,40 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 @import url('./__variables.css');
-
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-body {
-    font-family: "Inter", sans-serif;
-    font-weight: var(--text-weigth);
-    font-size: var(--text-size);
-    line-height: var(--text-heigth);
-    color: var(--text-primary-color);
-    background: var(--background-body);
-    margin: 0;
-}
+@import url('./__reset.css');
+@import url('./style.css');
 
 .container {
     max-width: 1250px;
@@ -50,7 +17,6 @@ body {
     font-weight: var(--btn-text-weigth);
     line-height: var(--btn-text-heigth);
     border-radius: 6px;
-    cursor: pointer;
 }
 
 .btn-primary {
