--- a/css/global.css
+++ b/css/global.css
@@ -14,6 +14,10 @@
     text-align: center;
 }
 
+a.active {
+    color: var(--link-color-hover);
+}
+
 .btn {
     min-width: 170px;
     min-height: 41px;
@@ -23,6 +27,13 @@
     line-height: var(--btn-text-heigth);
     border-radius: 6px;
     text-align: center;
+    cursor: pointer;
+    transition: all .2s;
+}
+
+.btn:hover {
+    background: var(--btn-hover-color);
+    border: 1px solid var(--btn-hover-color);
 }
 
 .btn-primary {
@@ -35,6 +46,10 @@
     border: 1px solid var(--btn-color);
     background: transparent;
     color: var(--btn-text-secondary-color);
+}
+
+.btn-secondary:hover {
+    color: var(--btn-text-primary-color);
 }
 
 .title {
