--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 @import url('./__variables.css');
 @import url('./__reset.css');
 @import url('./style.css');
@@ -18,6 +18,15 @@ a.active {
     color: var(--link-color-hover);
 }
 
+input {
+    font-family: "Inter", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.4);
+    background: #D6D8F9;
+    border: transparent;
+}
+
 .btn {
     min-width: 170px;
     min-height: 41px;
@@ -29,26 +38,30 @@ a.active {
     text-align: center;
     cursor: pointer;
     transition: all .2s;
-}
-
-.btn:hover {
-    background: var(--btn-hover-color);
-    border: 1px solid var(--btn-hover-color);
+    border: transparent;
 }
 
 .btn-primary {
     border: 1px solid var(--btn-color);
     background: var(--btn-color);
     color: var(--btn-text-primary-color);
+    transition: all .2s;
+}
+
+.btn-primary:hover {
+    background: var(--btn-hover-color);
+    border: 1px solid var(--btn-hover-color);
 }
 
 .btn-secondary {
     border: 1px solid var(--btn-color);
     background: transparent;
     color: var(--btn-text-secondary-color);
+    transition: all .2s;
 }
 
 .btn-secondary:hover {
+    background: var(--btn-hover-color);
     color: var(--btn-text-primary-color);
 }
 
@@ -65,3 +78,6 @@ a.active {
     line-height: var(--text-heigth);
     color: var(--text-secondary-color);
 }
+
+
+
