--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,4 @@
-@import "__variables.css";
+@import "_variables";
 
 /* top */
 .top {
@@ -6,12 +6,13 @@
     background-image: url("../assets/img/top-img/top-background.svg");
     background-repeat: no-repeat;
     background-position: bottom right;
+    &__left__part {
+        position: relative;
+        width: 70%;
+    }
 }
 
-.top__left__part {
-    position: relative;
-    width: 70%;
-}
+//.top__left
 
 .top__left__part::after {
     position: absolute;
